[gd_scene load_steps=27 format=2]

[ext_resource path="res://Bowser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character Assets/BowserW1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Character Assets/Bowser_Down.png" type="Texture" id=3]
[ext_resource path="res://Assets/Character Assets/BowserW2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character Assets/BowserF1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Character Assets/BowserF2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Character Assets/BowserIdle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Character Assets/BowserFireFire.png" type="Texture" id=8]
[ext_resource path="res://Assets/Character Assets/BowserW2_Fire.png" type="Texture" id=9]
[ext_resource path="res://Assets/Character Assets/BowserFire.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": false,
"name": "firefire",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle_Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "Fire_Transformation",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "Fire",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "go_down",
"speed": 0.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default_Fire",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.8333, 15.5 )

[sub_resource type="Animation" id=4]
resource_name = "Crecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fuego"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Idle", "default" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Nueva_Animacion"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "dies"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bowser_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Crecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Fuego"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "default", "default" ]
}

[sub_resource type="Animation" id=11]
resource_name = "Nueva_Animacion"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "dies"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bowser_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Crecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Fuego"

[sub_resource type="Animation" id=15]
resource_name = "Nueva_Animacion"
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "dies"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bowser_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bowser_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.5767, 1.97917 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 18.2247, 14.3518 )

[node name="Bowser" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_mask = 12
script = ExtResource( 1 )
jump_height = 100.0
jump_time_to_peak = 1.0
jump_time_to_descent = 0.5

[node name="Bowser_Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.805, 0.805 )
frames = SubResource( 1 )
animation = "Fire_Transformation"
frame = 5
playing = true

[node name="Bowser_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.166667, 4.50001 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crecer = SubResource( 4 )
anims/Fuego = SubResource( 8 )
anims/Nueva_Animacion = SubResource( 3 )
anims/dies = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationPlayer"]
anims/Crecer = SubResource( 9 )
anims/Fuego = SubResource( 10 )
anims/Nueva_Animacion = SubResource( 11 )
anims/dies = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationPlayer/AnimationPlayer"]
anims/Crecer = SubResource( 13 )
anims/Fuego = SubResource( 14 )
anims/Nueva_Animacion = SubResource( 15 )
anims/dies = SubResource( 16 )

[node name="Bot_Checker" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bot_Checker"]
position = Vector2( -0.0899994, 20.3125 )
shape = SubResource( 5 )

[node name="Damage_Checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_Checker"]
position = Vector2( 0.108599, 3.33333 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="Bowser_Sprite" to="." method="_on_Bowser_Sprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayerr_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayerr_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="AnimationPlayer/AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer/AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayerr_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer/AnimationPlayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Bot_Checker" to="." method="_on_Bot_Checker_area_entered"]
[connection signal="body_entered" from="Bot_Checker" to="." method="_on_Bot_Checker_body_entered"]
[connection signal="area_entered" from="Damage_Checker" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Damage_Checker" to="." method="_on_Area2D_body_entered"]
